--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 * {
-  font-family: 'Poppins';
-}
+  font-family: "Funnel Display", sans-serif;}
 
 .App {
   text-align: center;
@@ -26,6 +25,8 @@
 
 .intro-div {
   height: 600px;
+  background-color: rgb(210, 222, 238);
+  width: 100vw;
 }
 
 .experience-card-wrapper {
@@ -36,9 +37,7 @@
   transform: scale(1.02);
 }
 
-.experience-card-img
-
-#leadership-volunteering {
+.experience-card-img #leadership-volunteering {
   background-color: #92b1e2;
   max-width: 100%;
 }
@@ -49,13 +48,11 @@
   padding-bottom: 4px;
 }
 
-/* .custom-badge {
-  background-color: #c8d8f3 !important;
-  color: black;
-  border-radius: 50px; 
-  padding: 0.4em 0.75em;
-  font-size: 0.85rem;
-} */
+.story-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
 
 .custom-badge.bg-primary {
   background-color: #c8d8f3 !important;
